--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.2",
         "darkaonline/l5-swagger": "^8.6",
+        "doctrine/annotations": "^2.0",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "zircote/swagger-php": "^4.10"
